--- a/pages/main.css
+++ b/pages/main.css
@@ -49,6 +49,9 @@ nav a {
     color: lightblue;
 }
 
+
+
+
 /*Page Content and article styling*/
 .float-right {
     float: right;
@@ -110,6 +113,59 @@ main img {
 .last-paragraph {
     margin-bottom: 24px;
 }
+
+
+/* gallery layout */
+.articles {
+    display: flex;
+}
+
+.side-article {
+    background-color: rgb(137, 46, 46);
+    width: 50%;
+}
+
+.side-article ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 30px;
+    list-style: none;
+}
+
+.side-article ul li {
+    padding: 10px;
+    font-size: 30px;
+    border-bottom: solid 2px rgb(229, 154, 154);
+    color: white;
+}
+
+#top-list {
+    border-top: solid 2px rgb(251, 176, 176);
+}
+
+.main-article {
+    background-color: rgb(235, 181, 171);
+    width: calc(100% - 204.917);
+}
+
+.main-article ul {
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+}
+
+.main-article ul li {
+
+}
+
+.main-article img{
+    width: 200px;
+    height: 150px;
+}
+
+
+
 
 /*Footer Section*/
 footer {
