--- a/pages/main.css
+++ b/pages/main.css
@@ -121,7 +121,7 @@ main img {
 }
 
 .side-article {
-    background-color: rgb(137, 46, 46);
+    background-color: rgb(116, 49, 49);
     width: 50%;
 }
 
@@ -138,6 +138,8 @@ main img {
     font-size: 30px;
     border-bottom: solid 2px rgb(229, 154, 154);
     color: white;
+    white-space: nowrap;
+
 }
 
 #top-list {
@@ -145,7 +147,7 @@ main img {
 }
 
 .main-article {
-    background-color: rgb(235, 181, 171);
+    background-color: rgb(253, 230, 230);
     width: calc(100% - 204.917);
 }
 
@@ -153,10 +155,6 @@ main img {
     display: flex;
     list-style: none;
     flex-wrap: wrap;
-}
-
-.main-article ul li {
-
 }
 
 .main-article img{
